Lag tester for KtorEnv