@@ -63,6 +63,7 @@ dependencies {
     testImplementation("io.kotest:kotest-runner-junit5-jvm:$kotestVersion")
     testImplementation("io.kotest:kotest-assertions-core-jvm:$kotestVersion")
     testImplementation("io.kotest:kotest-framework-engine:$kotestVersion")
+    testImplementation("io.kotest:kotest-extensions-jvm:$kotestVersion")
 
     testImplementation("org.wiremock:wiremock:3.3.1")
     testImplementation("io.kotest.extensions:kotest-extensions-wiremock:2.0.1")
@@ -79,5 +80,6 @@ tasks.withType<org.jetbrains.kotlin.gradle.tasks.KotlinCompile> {
 
 tasks.test {
     useJUnitPlatform()
+    jvmArgs("--add-opens=java.base/java.util=ALL-UNNAMED")
 }
 
